[package]
name = "hyperliquid-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/grpcRawDataExample/main.rs"

[[bin]]
name = "filter_example"
path = "src/grpcFilterExample/filter_example.rs"

[[bin]]
name = "s3_blocks_backfill"
path = "src/replicaCmdsOnS3Example/s3_blocks_backfill.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
zstd = "0.13"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
aws-config = "1.0"
aws-sdk-s3 = "1.0"

[build-dependencies]
tonic-build = "0.10"
